# Type-on-Strap

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .jekyll-metadata  .project  .travis.yml  2017-11-30_limsuna_posts.md  2020-05-28-network-basic.md  2021-07-25-environment-setup.md  2025-06-21-rss-2025.csv  404.html  CNAME  CONTRIBUTING-GUIDE.md  DOCUMENTATION.md  Gemfile  LICENSE  README.md  _config.yml  _deploy.yml  about.md  build.sh  buildspec.yml  code  ethical_best_practices.html  feed.xml  gcp  gulpfile.js  iclr_24.csv  iclr_24.numbers  index.html  index.md  jekyll-theme.gemspec  jekyll-theme.gemspec.save  package-lock.json  package.json  portfolio.html  portfolio_index.html  posts.html  redirects.json  robots.txt  (+9 more)
content/Stuyver/TS-tools-master/: .gitignore  LICENSE  README.md  environment.yml  setup.cfg  setup.py
content/Stuyver/TS-tools-master/data/: reactions_am.txt  test_aldol.txt  test_co.txt  test_eas_apolar.txt  test_eas_polar.txt  test_passerini.txt  test_pd.txt
content/Stuyver/TS-tools-master/data/dft_ts_structures/: 100_ts.xyz  101_ts.xyz  102_ts.xyz  12_ts.xyz  13_ts.xyz  14_ts.xyz  15_ts.xyz  16_ts.xyz  17_ts.xyz  18_ts.xyz  19_ts.xyz  1_ts.xyz  21_ts.xyz  22_ts.xyz  23_ts.xyz  24_ts.xyz  25_ts.xyz  26_ts.xyz  27_ts.xyz  28_ts.xyz  29_ts.xyz  2_ts.xyz  30_ts.xyz  31_ts.xyz  32_ts.xyz  33_ts.xyz  34_ts.xyz  36_ts.xyz  37_ts.xyz  38_ts.xyz  (+61 more)
content/Stuyver/TS-tools-master/run_scripts/: run_conformational_search.py  run_dft_validation.py  run_ts_searcher.py  run_ts_searcher_dft.py
content/Stuyver/TS-tools-master/xtb_external_script/: xtb_external.py
(+2285 files in other folders)
