
[metadata]
name = tstools
version = 0.4.2
license = MIT
description = Tools to locate transition state geometries based on a reaction SMILES input
long_description = file: README.md
author = Thijs Stuyver
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src